HLMS-003 - add missing ex handler for existing user, update docs
