# sectors-api/src/main/resources/static/docs/openapi.yml
@@ -32,6 +32,12 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/ErrorResponseDTO'
+                '409':
+                    description: User already exists
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ErrorResponseDTO'
                 '500':
                     description: Internal server error
                     content:
